--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@ nav{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #3F51B5;
+  background-color: #931afe;
+  box-shadow: 0px 5px 29px 0px ;
+
 }
 
 nav img{
@@ -92,7 +94,6 @@ input[type=date]:focus, input:focus {
 }
 
 #background-home{
-  background-image: url('../src/LLBG.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -140,7 +141,7 @@ input[type=date]:focus, input:focus {
 }
 
 .credential{
-  background-image: url("IdBorreamigo.svg");
+  background-image: url("bg-reportera.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
